--- a/subprojects/griffon-icomoonicons-guide/src/asciidoc/modules.adoc
+++ b/subprojects/griffon-icomoonicons-guide/src/asciidoc/modules.adoc
@@ -13,9 +13,9 @@ binding if the wrong type has been applied by the Griffon runtime.
 
 == JavaFX
 
-Module name: +icomoonicons-javafx-groovy+
+Module name: `icomoonicons-javafx-groovy`
 
-Depends on: +javafx-groovy+
+Depends on: `javafx-groovy`
 
 [source,java,options="nowrap"]
 ----
@@ -27,14 +27,14 @@ The following nodes will become available on a Groovy View
 [options="2*,header"]
 |===
 | Node        | Type
-| icoMoonIcon | +{api_link_icomoonicon_javafx}+
+| icoMoonIcon | `{api_link_icomoonicon_javafx}`
 |===
 
 == Swing
 
-Module name: +icomoonicons-swing-groovy+
+Module name: `icomoonicons-swing-groovy`
 
-Depends on: +swing-groovy+
+Depends on: `swing-groovy`
 
 [source,java,options="nowrap"]
 ----
@@ -46,11 +46,11 @@ The following nodes will become available on a Groovy View
 [options="2*,header"]
 |===
 | Node        | Type
-| icoMoonIcon | +{api_link_icomoonicon_swing}+
+| icoMoonIcon | `{api_link_icomoonicon_swing}`
 |===
 
 Both `icoMoonIcon` Nodes support the following properties
 
-icon:: The name of the icon, such as +github+ or +twitter+.
-size:: The size of the icon. Either +16+ or +32+.
+icon:: The name of the icon, such as `github` or `twitter`.
+size:: The size of the icon. Either `16` or `32`.
 
