--- a/README.adoc
+++ b/README.adoc
@@ -14,6 +14,8 @@ image:https://img.shields.io/badge/donations-Patreon-orange.svg[https://www.patr
 
 ---
 
+*UPDATE*: This plugin has been superceded by link:https://github.com/aalmiray/ikonli[Ikonli]. No further updates will be posted to this project.
+
 Provides a shortcut for adding icons based on
 https://icomoon.io/#icons-icomoon[IcoMoon Icon Pack, window="_blank"].
 
